deployments/k8s/ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: prometheus.arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stack-kube-prometheus-stac-prometheus
                port:
                  number: 9090
